--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -9,28 +9,17 @@
 }
 
 <h2> Matches</h2>
-@using (Html.BeginForm("Index", "Matches", FormMethod.Post))
-{
-    <div>
-        <table>
-        <tr>
-            <td>
-                Round:&nbsp;&nbsp;
-            </td>
-            <td>
-                @Html.DropDownList("scheduleId", (SelectList)ViewBag.ScheduleID, new { @class = "form-control" })
-            </td>
-        </tr>
-        <tr><td></td>
-                <td >
-                    <input type="submit" value="Select Game Date" class="btn btn-primary" />
-                </td>
-            </tr>
-        </table>
-    </div>
-}
-<br />
-
+<table>
+    <tr>
+        <td>
+            Date:&nbsp;&nbsp;
+        </td>
+        <td>
+            @Html.DropDownList("scheduleId", (SelectList)ViewBag.ScheduleID, new { @class = "form-control", @onchange = "newSelect(this.value)" })
+        </td>
+    </tr>
+</table>
+<br/>
 <p>
     @Html.ActionLink("This week's standings report", "StandingsReport", new { id = ViewBag.WeekId })<br />
     @Html.ActionLink("This week's score cards", "ScoreCardReport", new { id = ViewBag.WeekId })
@@ -39,18 +28,18 @@
 <table class="table-condensed table-striped">
     <tr>
         <th>
-        @{
-            if(HttpContext.Current.User.IsInRole("Admin") ||
-                HttpContext.Current.User.IsInRole("LeagueAdmin") )
-            {
-                @Html.Raw("Exchange Rink") 
+            @{
+                if (HttpContext.Current.User.IsInRole("Admin") ||
+                    HttpContext.Current.User.IsInRole("LeagueAdmin"))
+                {
+                    @Html.Raw("Exchange Rink")
+                }
             }
-        }
-            </th>
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Rink)
         </th>
-        
+
         <th>
             @Html.DisplayNameFor(model => model.TeamNo1)
         </th>
@@ -74,8 +63,8 @@
         <tr>
             <td>
                 @{
-                    if(id > 0 && (HttpContext.Current.User.IsInRole("Admin") ||
-                                    HttpContext.Current.User.IsInRole("LeagueAdmin"))) 
+                    if (id > 0 && (HttpContext.Current.User.IsInRole("Admin") ||
+                                    HttpContext.Current.User.IsInRole("LeagueAdmin")))
                     {
                         @Html.ActionImage("MoveUp", new { id = item.id }, "~/Content/Images/uparrow.png", "Move Up one rink");
                     }
@@ -183,6 +172,19 @@
 
 </table>
 <span style="color: red;">Teams with players in wheelchairs are highlighted in red</span>
+
+@section Scripts {
+    <script type="text/javascript">
+        function newSelect(id)
+        {
+            window.location.href = "Matches?scheduleid=" + id.toString();
+
+        }
+
+
+    </script>
+}
+
 
 
 
