--- a/Tournament/Views/Home/Index.cshtml
+++ b/Tournament/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Tournament.Models.League>
 @{
     ViewBag.Title = "Home Page";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 @ViewBag.Error
