--- a/Tournament/Views/Accounts/ChangePassword.cshtml
+++ b/Tournament/Views/Accounts/ChangePassword.cshtml
@@ -2,14 +2,16 @@
 
 @{
     ViewBag.Title = "Change Password";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
+}
 }
 
 <h2>Change Password</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
 
         <hr />
@@ -21,7 +23,7 @@
                 @Html.ValidationMessageFor(model => model.EmailAddress, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.OldPassword, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
