--- a/Tournament/Views/Accounts/ForgotPassword.cshtml
+++ b/Tournament/Views/Accounts/ForgotPassword.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Tournament.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "ForgotPassword";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <h2>Forgot Password</h2>
-
+<div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
