--- a/Tournament/Views/Accounts/PasswordAccepted.cshtml
+++ b/Tournament/Views/Accounts/PasswordAccepted.cshtml
@@ -1,10 +1,13 @@
 ﻿
 @{
     ViewBag.Title = "PasswordAccepted";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <h2>Password Change Accepted</h2>
 
 <p>Your password change was accepted.</p>
+
+@Html.ActionLink("Log in", "Index", "Home")<br />
 
 
