--- a/Tournament/Views/Leagues/Create.cshtml
+++ b/Tournament/Views/Leagues/Create.cshtml
@@ -2,6 +2,12 @@
 
 @{
     ViewBag.Title = "Create";
+    var TeamList = new List<SelectListItem>()
+        {
+            new SelectListItem() {Value = "1", Text = "Singles"},
+            new SelectListItem() {Value = "2", Text = "Pairs"},
+            new SelectListItem() {Value = "3", Text = "Triples"}
+        };
 }
 
 <h2>Create</h2>
@@ -26,8 +32,53 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TeamSize, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TeamSize, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model=>model.TeamSize, new SelectList(TeamList,"Value","Text"), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TeamSize, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.TiesAllowed, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.TiesAllowed)
+                    @Html.ValidationMessageFor(model => model.TiesAllowed, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PointsCount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.PointsCount)
+                    @Html.ValidationMessageFor(model => model.PointsCount, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.WinPoints, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.WinPoints, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WinPoints, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.TiePoints, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TiePoints, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TiePoints, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ByePoints, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ByePoints, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ByePoints, "", new { @class = "text-danger" })
             </div>
         </div>
 
