--- a/Tournament/Views/UserLeagues/Edit.cshtml
+++ b/Tournament/Views/UserLeagues/Edit.cshtml
@@ -2,6 +2,12 @@
 
 @{
     ViewBag.Title = "Edit";
+    var dict = new List<SelectListItem>()
+    {
+        new SelectListItem() {Value = "", Text = "Observer"},
+        new SelectListItem() {Value = "Scorer", Text = "Scorer"},
+        new SelectListItem() {Value = "LeagueAdmin", Text = "League Administrator"}
+    };
 }
 
 <h2>Edit</h2>
@@ -11,7 +17,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>@HttpContext.Current.Session["LeagueName"].ToString()</h4>
+    <h4>User League</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
@@ -24,14 +30,21 @@
     <div class="form-group">
         @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-           @Model.User.username
+            @Model.User.username
+        </div>
+    </div>
+    
+    <div class="form-group">
+        @Html.LabelFor(model => model.League.LeagueName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Model.League.LeagueName
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Roles, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Roles", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("Roles", dict, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Roles, "", new { @class = "text-danger" })
         </div>
     </div>
