fixed issues with users

--- a/Tournament/Views/Schedules/Create.cshtml
+++ b/Tournament/Views/Schedules/Create.cshtml
@@ -24,7 +24,7 @@
                 @Html.ValidationMessageFor(model => model.WeekNumber, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <br/><br/>
         <div class="form-group">
             @Html.LabelFor(model => model.GameDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -55,8 +55,8 @@
             $('#GameDate').datepicker({
                 changeMonth: true,
                 changeYear: true,
-                format: "dd/mm/yyyy",
-                language: "tr"
+                format: "mm/dd/yyyy",
+                language: "en"
             });
         });
        
