--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -9,20 +9,27 @@
 }
 
 <h2> Matches</h2>
-<table>
-    <tr>
-        <td>
-            Date:&nbsp;&nbsp;
-        </td>
-        <td>
-            @Html.DropDownList("scheduleId", (SelectList)ViewBag.ScheduleID, new { @class = "form-control", @onchange = "newSelect(this.value)" })
-        </td>
-    </tr>
-</table>
+@if (((SelectList) ViewBag.ScheduleID).Count() > 0)
+{
+    <table>
+        <tr>
+            <td>
+                Date:&nbsp;&nbsp;
+            </td>
+            <td>
+                @Html.DropDownList("scheduleId", (SelectList) ViewBag.ScheduleID, new {@class = "form-control", @onchange = "newSelect(this.value)"})
+            </td>
+        </tr>
+    </table>
+}
+    <div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 <br/>
 <p>
-    @Html.ActionLink("This week's standings report", "StandingsReport", new { id = ViewBag.WeekId })<br />
-    @Html.ActionLink("This week's score cards", "ScoreCardReport", new { id = ViewBag.WeekId })
+    @if ((int) ViewBag.WeekID > 0)
+    {
+        @Html.ActionLink("This week's standings report", "StandingsReport", new {id = ViewBag.WeekId})<br/>
+        @Html.ActionLink("This week's score cards", "ScoreCardReport", new {id = ViewBag.WeekId})
+    }
 </p>
 
 <table class="table-condensed table-striped">
