--- a/Tournament/Views/UserLeagues/Create.cshtml
+++ b/Tournament/Views/UserLeagues/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
     var dict = new List<SelectListItem>()
     {
-        new SelectListItem() {Value = "", Text = "Observer"},
+        new SelectListItem() {Value = "Observer", Text = "Observer"},
         new SelectListItem() {Value = "Scorer", Text = "Scorer"},
         new SelectListItem() {Value = "LeagueAdmin", Text = "League Administrator"}
     }; 
