hide password when

--- a/Tournament/Content/Site.css
+++ b/Tournament/Content/Site.css
@@ -27,3 +27,10 @@ textarea {
     color: Red;
     font-weight: bold;
 }
+
+.navbar-default {
+    background-color: lemonchiffon;
+    background-image: none;
+    background-repeat: no-repeat;
+    color:black;
+}
