--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -32,7 +32,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip),"--Select Skip--", htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip)," ", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), "--Select Vice Skip--", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), " ", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), "--Select Lead--", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), " ", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -82,69 +82,71 @@
 </div>
 }
 
-<h2>Teams So Far</h2>
-<table class="table-condensed table-striped">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TeamNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Skip)
-        </th>
-        @{
-            if ((int) ViewBag.TeamSize > 2)
-            {
-                <th>
-                    @Html.DisplayNameFor(model => model.ViceSkip)
-                </th>
-            }
-        }
+<p class="h4">You can leave some positions open while considering the makeup of the teams. You can remove a player from this team if you want to move a player to another team.</p>
 
-    @{
-        if ((int) ViewBag.TeamSize > 1)
-        {
-
+    <h2>Teams So Far</h2>
+    <table class="table-condensed table-striped">
+        <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Lead)
+                @Html.DisplayNameFor(model => model.TeamNo)
             </th>
-        }
-    }
+            <th>
+                @Html.DisplayNameFor(model => model.Skip)
+            </th>
+            @{
+                if ((int)ViewBag.TeamSize > 2)
+                {
+                    <th>
+                        @Html.DisplayNameFor(model => model.ViceSkip)
+                    </th>
+                }
+            }
+
+            @{
+                if ((int)ViewBag.TeamSize > 1)
+                {
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Lead)
+                    </th>
+                }
+            }
         </tr>
 
-    @foreach (var item in (IEnumerable<Tournament.Models.Team>) ViewBag.Teams)
-    {
-    <tr>
-        <th>
-            @Html.DisplayFor(modelItem => item.TeamNo)
-        </th>
-        <td>
-            @Html.DisplayFor(modelItem => item.Player.Membership.FullName)
-        </td>
-    
-        @if ((int) ViewBag.TeamSize > 2)
+        @foreach (var item in (IEnumerable<Tournament.Models.Team>)ViewBag.Teams)
         {
+            <tr>
+                <th>
+                    @Html.DisplayFor(modelItem => item.TeamNo)
+                </th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Player.Membership.FullName)
+                </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Player1.Membership.FullName)
-            </td>
+                @if ((int)ViewBag.TeamSize > 2)
+                {
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Player1.Membership.FullName)
+                    </td>
+                }
+
+                @if ((int)ViewBag.TeamSize > 1)
+                {
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Player2.Membership.FullName)
+                    </td>
+                }
+
+
+            </tr>
         }
+    </table>
 
-        @if ((int) ViewBag.TeamSize > 1)
-        {
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Player2.Membership.FullName)
-            </td>
-        }
-
-
-        </tr>
-    }
-</table>
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 
 
 
