--- a/Tournament/Views/Home/Index.cshtml
+++ b/Tournament/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @ViewBag.Error
-<table class="table">
+<table class="table-condensed table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.LeagueName)
