--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -18,12 +18,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
         @Html.HiddenFor(model => model.Leagueid)
+        @Html.HiddenFor(model => model.TeamNo)
         @Html.HiddenFor(model => model.rowversion)
 
         <div class="form-group">
             @Html.LabelFor(model => model.TeamNo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.TeamNo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TeamNo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,7 +33,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip)," ", htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip), htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -44,7 +45,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), " ", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -62,7 +63,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), " ", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -82,9 +83,13 @@
 </div>
 }
 
-<p class="h4">You can leave some positions open while considering the makeup of the teams. You can remove a player from this team if you want to move a player to another team.</p>
+<p class="h4">You can leave some positions open while considering the makeup of the teams. You can remove a player from this team if you want to move that player to another team.</p>
 
-    <h2>Teams So Far</h2>
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+<h2>Teams So Far</h2>
     <table class="table-condensed table-striped">
         <tr>
             <th>
@@ -144,9 +149,7 @@
         }
     </table>
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+    
 
 
 
