fixed error in userleague controller

--- a/Tournament/Views/UserLeagues/Create.cshtml
+++ b/Tournament/Views/UserLeagues/Create.cshtml
@@ -53,5 +53,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new {id=ViewBag.LeagueId})
+    @Html.ActionLink("Back to List", "Index", new {id=Model.LeagueId})
 </div>
