--- a/Tournament/Views/UserLeagues/Index.cshtml
+++ b/Tournament/Views/UserLeagues/Index.cshtml
@@ -12,12 +12,12 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor("Role")
+            @Html.Raw("Role")
         </th>
         
         
         <th>
-            @Html.DisplayNameFor("League Name")
+            @Html.Raw("League Name")
         </th>
         <th></th>
     </tr>
