--- a/Tournament/Views/Players/Index.cshtml
+++ b/Tournament/Views/Players/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 @{
-    if (HttpContext.Current.User.IsInRole("Admin") || HttpContext.Current.User.IsInRole("LeagueAdmin"))
+    if (User.IsInRole("Admin") || User.IsInRole("LeagueAdmin"))
     {
         <p>
             @Html.ActionLink("Add a Player", "Create")
@@ -34,8 +34,8 @@
 
                     <td>
                         @{
-                            if (HttpContext.Current.User.IsInRole("Admin") ||
-                                HttpContext.Current.User.IsInRole("LeagueAdmin"))
+                            if (User.IsInRole("Admin") ||
+                                User.IsInRole("LeagueAdmin"))
                             {
                                 @Html.ActionLink("Edit", "Edit", new { id = item.id })
                                 @Html.Raw(" | ")
