--- a/Tournament/Views/Schedules/Index.cshtml
+++ b/Tournament/Views/Schedules/Index.cshtml
@@ -9,8 +9,8 @@
 
 <p>
 @{
-    if (HttpContext.Current.User.IsInRole("Admin") ||
-        HttpContext.Current.User.IsInRole("LeagueAdmin"))
+    if (User.IsInRole("Admin") ||
+        User.IsInRole("LeagueAdmin"))
     {
         @Html.ActionLink("Create New", "Create")
     }
@@ -45,8 +45,8 @@
         </td>
         <td>
         @{
-            if (HttpContext.Current.User.IsInRole("Admin") ||
-                HttpContext.Current.User.IsInRole("LeagueAdmin"))
+            if (User.IsInRole("Admin") ||
+                User.IsInRole("LeagueAdmin"))
             {
                 @Html.ActionLink("Edit", "Edit", new {id = item.id}) 
                 @Html.Raw(" | ")
