--- a/Tournament/Views/Teams/Index.cshtml
+++ b/Tournament/Views/Teams/Index.cshtml
@@ -9,7 +9,7 @@
 
 <p>
 @{
-    if (HttpContext.Current.User.IsInRole("Admin") || HttpContext.Current.User.IsInRole("LeagueAdmin"))
+    if (User.IsInRole("Admin") || User.IsInRole("LeagueAdmin"))
     {
         @Html.ActionLink("Add Team", "Create")<br/>
     }
@@ -65,8 +65,8 @@
     }
         <td>
         @{
-            if (HttpContext.Current.User.IsInRole("Admin") ||
-                HttpContext.Current.User.IsInRole("LeagueAdmin"))
+            if (User.IsInRole("Admin") ||
+                User.IsInRole("LeagueAdmin"))
             {
                 @Html.ActionLink("Edit", "Edit", new {id = item.id})
                 @Html.Raw(" | ")
