added rinkorder table

--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -85,6 +85,14 @@ Deleting a leagues will:
         <dd>
             @Html.DisplayFor(model => model.ByePoints)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.StartWeek)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartWeek)
+        </dd>
 
 
     </dl>
