--- a/Tournament/Views/Leagues/Index.cshtml
+++ b/Tournament/Views/Leagues/Index.cshtml
@@ -34,13 +34,17 @@
             @Html.DisplayNameFor(model => model.WinPoints)
         </th>
 
-        
+
         <th>
             @Html.DisplayNameFor(model => model.TiePoints)
         </th>
 
         <th>
             @Html.DisplayNameFor(model => model.ByePoints)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.StartWeek)
         </th>
 
         <th></th>
@@ -66,12 +70,16 @@
         <td>
             @Html.DisplayFor(modelItem => item.WinPoints)
         </td>
-        
+
         <td>
             @Html.DisplayFor(modelItem => item.TiePoints)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ByePoints)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.StartWeek)
         </td>
 
         <td>
