--- a/Tournament/Views/Leagues/Edit.cshtml
+++ b/Tournament/Views/Leagues/Edit.cshtml
@@ -90,6 +90,14 @@
                 @Html.DisplayFor(model => model.ByePoints)
             </div>
         </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.StartWeek, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StartWeek, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.StartWeek, "", new { @class = "text-danger" })
+            </div>
+        </div>
     </div>
 
 
