--- a/Tournament/Views/Shared/_Layout.cshtml
+++ b/Tournament/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Users", "Index", "Users")</li>
                                 <li>@Html.ActionLink("Leagues", "Index", "Leagues")</li>
-                                <li>@Html.ActionLink("Rinks", "Index", "RinkOrders")</li>
+                                <li>@Html.ActionLink("Rinks Play Order", "Index", "RinkOrders")</li>
                                 <li>@Html.ActionLink("Error Log", "Index", "Elmah", new { type = "" }, new { target = "_blank" })</li>
                             </ul>
                         </li>
