--- a/Tournament/Views/RinkOrders/Delete.cshtml
+++ b/Tournament/Views/RinkOrders/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Rink</h4>
+    <h4>Rink Play Order</h4>
     <hr />
     <dl class="dl-horizontal">
 
