--- a/Tournament/Views/RinkOrders/Edit.cshtml
+++ b/Tournament/Views/RinkOrders/Edit.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Rink</h4>
+    <h4>Rink Play Order</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
