--- a/Tournament/Views/Players/Create.cshtml
+++ b/Tournament/Views/Players/Create.cshtml
@@ -37,7 +37,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new {id = Model.Leagueid})
 </div>
 
 
