--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -86,7 +86,7 @@
 <p class="h4">You can leave some positions open while considering the makeup of the teams. You can remove a player from this team if you want to move that player to another team.</p>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.Leagueid })
 </div>
 
 <h2>Teams So Far</h2>
