--- a/Tournament/Views/Teams/TeamReport.cshtml
+++ b/Tournament/Views/Teams/TeamReport.cshtml
@@ -9,7 +9,7 @@
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", new {id=ViewBag.Id})
         </td>
     </tr>
     <tr>
