--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -17,7 +17,7 @@
                 Date:&nbsp;&nbsp;
             </td>
             <td>
-                @Html.DropDownList("scheduleId", (SelectList) ViewBag.ScheduleID, new {@class = "form-control", @onchange = "newSelect(this.value)"})
+                @Html.DropDownList("weekid", (SelectList) ViewBag.ScheduleID, new {@class = "form-control", @onchange = "newSelect(this.value)"})
             </td>
         </tr>
     </table>
@@ -27,8 +27,8 @@
 <p>
     @if ((int) ViewBag.WeekID > 0)
     {
-        @Html.ActionLink("This week's standings report", "StandingsReport", new {id = ViewBag.WeekId})<br/>
-        @Html.ActionLink("This week's score cards", "ScoreCardReport", new {id = ViewBag.WeekId})
+        @Html.ActionLink("This week's standings report", "StandingsReport", new {weekid = ViewBag.WeekId, id=ViewBag.Id})<br/>
+        @Html.ActionLink("This week's score cards", "ScoreCardReport", new {weekid = ViewBag.WeekId, id = ViewBag.Id })
     }
 </p>
 
@@ -184,7 +184,7 @@
     <script type="text/javascript">
         function newSelect(id)
         {
-            window.location.href = "Matches?scheduleid=" + id.toString();
+            window.location.href = "/Matches/Index/" + @ViewBag.Id + "?weekid=" + id.toString();
 
         }
 
