--- a/Tournament/Views/Matches/StandingsReport.cshtml
+++ b/Tournament/Views/Matches/StandingsReport.cshtml
@@ -10,7 +10,7 @@
 <table>
     <tr>
         <td>
-            @Html.ActionLink("Back to List", "Index", new { scheduleid = ViewBag.RoundId })
+            @Html.ActionLink("Back to List", "Index", new { weekid = ViewBag.WeekId, id = ViewBag.Id })
         </td>
     </tr>
     <tr>
