--- a/Tournament/Views/Schedules/Edit.cshtml
+++ b/Tournament/Views/Schedules/Edit.cshtml
@@ -55,7 +55,7 @@
     </div>
 }
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.Leagueid })
 </div>
 
 <h2>Schedule So Far</h2>
