--- a/Tournament/Views/Teams/Create.cshtml
+++ b/Tournament/Views/Teams/Create.cshtml
@@ -84,7 +84,7 @@
 <p class="h4">You can leave some positions open while considering the makeup of the teams</p>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new {id= Model.Leagueid})
 </div>
 
 <h2>Teams So Far</h2>
